# hippo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: app.rs  logging.rs  main.rs  tmdb.rs  ui.rs
