[package]
name = "hippo"
version = "1.0.5"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
log = "0.4"
fern = "0.7"
anyhow = "1"
dirs = "6"
open = "5"
